User registration form completed

--- a/src/main/resources/view/login_form.fxml
+++ b/src/main/resources/view/login_form.fxml
@@ -1,14 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.rent_a_car.controller.LoginFormController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.rent_a_car.controller.LoginFormController">
+   <children>
+      <Label layoutX="307.0" layoutY="24.0" text="Car Hire" textFill="#09077af1">
+         <font>
+            <Font name="Berlin Sans FB Bold" size="64.0" />
+         </font>
+         <effect>
+            <Glow level="0.48" />
+         </effect>
+      </Label>
+      <Text fill="#242222ac" layoutX="296.0" layoutY="246.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the Car Hire Administration System. Kindly enter your credentials here to securely access the system and effectively manage our diverse fleet of vehicles. We appreciate your commitment to ensuring a smooth journey for both our customers and our fleet. Unauthorized access is strictly prohibited." wrappingWidth="278.4000366210937">
+         <font>
+            <Font name="Bell MT Bold" size="15.0" />
+         </font>
+      </Text>
+      <ImageView fx:id="image" fitHeight="127.0" fitWidth="294.0" layoutX="283.0" layoutY="100.0" opacity="0.75" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/cars.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="13.0" layoutY="67.0" text="User Login">
+         <font>
+            <Font name="Bodoni MT Bold" size="21.0" />
+         </font>
+      </Label>
+      <Label layoutX="14.0" layoutY="123.0" text="User Name">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="13.0" layoutY="191.0" text="Password">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtUserName" layoutX="16.0" layoutY="144.0" prefHeight="26.0" prefWidth="258.0" />
+      <TextField fx:id="txtPassword" layoutX="15.0" layoutY="209.0" prefHeight="26.0" prefWidth="258.0" />
+      <Button layoutX="222.0" layoutY="250.0" mnemonicParsing="false" style="-fx-background-color: rgba(178, 190, 195,1.0);" text="Login">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Label layoutX="16.0" layoutY="291.0" text="Haven't an Account ?">
+         <font>
+            <Font name="Berlin Sans FB" size="13.0" />
+         </font>
+      </Label>
+      <Label fx:id="createAccountLabel" layoutX="138.0" layoutY="293.0" onMouseClicked="#createAccountMouseClick" prefHeight="14.0" prefWidth="98.0" text="Create an Account" textFill="#290ef2">
+         <font>
+            <Font name="Berlin Sans FB" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Label>
+   </children>
 </AnchorPane>
