--- a/src/main/resources/view/login_form.fxml
+++ b/src/main/resources/view/login_form.fxml
@@ -48,7 +48,7 @@
       </Label>
       <TextField fx:id="txtUserName" layoutX="16.0" layoutY="144.0" prefHeight="26.0" prefWidth="258.0" />
       <TextField fx:id="txtPassword" layoutX="15.0" layoutY="209.0" prefHeight="26.0" prefWidth="258.0" />
-      <Button layoutX="222.0" layoutY="250.0" mnemonicParsing="false" style="-fx-background-color: rgba(178, 190, 195,1.0);" text="Login">
+      <Button layoutX="222.0" layoutY="250.0" mnemonicParsing="false" onAction="#btnLoginAction" style="-fx-background-color: rgba(178, 190, 195,1.0);" text="Login">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
