--- a/src/main/resources/view/dashboard_page.fxml
+++ b/src/main/resources/view/dashboard_page.fxml
@@ -1,28 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Glow?>
+<?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="540.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.rent_a_car.controller.DashboardPageController">
+<AnchorPane fx:id="rootNode" prefHeight="540.0" prefWidth="845.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.rent_a_car.controller.DashboardPageController">
    <children>
-      <AnchorPane prefHeight="540.0" prefWidth="200.0" style="-fx-background-color: rgba(209, 204, 192,1.0);">
+      <AnchorPane prefHeight="540.0" prefWidth="200.0" style="-fx-background-color: rgba(209, 204, 192,1.0);" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label layoutX="40.0" layoutY="32.0" text="Main Menu">
                <font>
                   <Font name="Bell MT Bold" size="24.0" />
                </font>
             </Label>
+            <Button layoutX="18.0" layoutY="119.0" mnemonicParsing="false" onAction="#btnCarCategoryAction" text="Car Category">
+               <font>
+                  <Font name="Bell MT Bold" size="18.0" />
+               </font>
+               <effect>
+                  <InnerShadow />
+               </effect>
+            </Button>
+            <Button layoutX="18.0" layoutY="177.0" mnemonicParsing="false" text="Car Details">
+               <font>
+                  <Font name="Bell MT Bold" size="18.0" />
+               </font>
+               <effect>
+                  <InnerShadow />
+               </effect>
+            </Button>
+            <Button layoutX="18.0" layoutY="234.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="130.0" text="Rent Details">
+               <font>
+                  <Font name="Bell MT Bold" size="18.0" />
+               </font>
+               <effect>
+                  <InnerShadow />
+               </effect>
+            </Button>
+            <Button layoutX="18.0" layoutY="292.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="163.0" text="Customer Details">
+               <font>
+                  <Font name="Bell MT Bold" size="18.0" />
+               </font>
+               <effect>
+                  <InnerShadow />
+               </effect>
+            </Button>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="stagePane" layoutX="200.0" prefHeight="540.0" prefWidth="546.0" />
-      <AnchorPane fx:id="basicPane" layoutX="199.0" prefHeight="540.0" prefWidth="546.0">
+      <AnchorPane fx:id="stagePane" layoutX="200.0" prefHeight="540.0" prefWidth="651.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <AnchorPane fx:id="carCategoryPane" accessibleRole="NODE" layoutX="200.0" prefHeight="540.0" prefWidth="651.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label layoutX="275.0" layoutY="8.0" opacity="0.14" text="Car Hire" textFill="#09077af1">
+            <Label layoutX="352.0" layoutY="14.0" opacity="0.14" text="Car Hire" textFill="#09077af1">
                <font>
                   <Font name="Berlin Sans FB Bold" size="64.0" />
                </font>
@@ -30,11 +65,55 @@
                   <Glow level="0.48" />
                </effect>
             </Label>
-            <ImageView fx:id="image" fitHeight="127.0" fitWidth="294.0" layoutX="256.0" layoutY="85.0" opacity="0.22" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="image" fitHeight="127.0" fitWidth="294.0" layoutX="334.0" layoutY="91.0" opacity="0.22" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/cars.png" />
                </image>
             </ImageView>
+            <Label layoutX="14.0" layoutY="63.0" text="Car Category" textFill="#1c0f71">
+               <font>
+                  <Font name="Times New Roman Bold Italic" size="37.0" />
+               </font>
+               <effect>
+                  <Glow />
+               </effect>
+            </Label>
+            <Label layoutX="14.0" layoutY="180.0" text="Car Category ID">
+               <font>
+                  <Font name="Bell MT Bold" size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtCarCategoryId" layoutX="182.0" layoutY="179.0" prefHeight="26.0" prefWidth="163.0" promptText="EX: C001" />
+            <Label layoutX="14.0" layoutY="224.0" text="Car Category Name">
+               <font>
+                  <Font name="Bell MT Bold" size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtCarCategoryName" layoutX="182.0" layoutY="222.0" prefHeight="26.0" prefWidth="163.0" />
+            <Button layoutX="451.0" layoutY="248.0" mnemonicParsing="false" onAction="#btnAddCategoryAction" text="Add">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="513.0" layoutY="248.0" mnemonicParsing="false" text="Delete">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="366.0" layoutY="178.0" mnemonicParsing="false" text="Search">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
          </children>
       </AnchorPane>
    </children>
